# supplementary

./: .gitignore  abd
cling_wrap/: CMakeLists.txt
cling_wrap/cmake/: GenRE2C.cmake
cling_wrap/include/: External.h
cling_wrap/libcling_wrap/: External.cpp
constraintsolver/include/: CNSMTGSolver.h  GSolver.h
constraintsolver/src/: CNSMTGSolver.cpp  CNSat.cpp  GSolver.cpp
event_handling/include/: NotifyTimer.h
event_handling/src/: Timer.cpp
fsystem/include/: FileSystem.h
fsystem/src/: FileSystem.cpp
rqt_alica_client/: package.xml
sys_conf_ros_proxy/: CMakeLists.txt  package.xml
sys_conf_ros_proxy/include/: SysConfRosCommunication.h
sys_conf_ros_proxy/msg/: ChangeAtr.msg
sys_conf_ros_proxy/src/: SysConfRosCommunication.cpp
system_config/: CMakeLists.txt  package.xml
system_config/include/: ChangeAtr.h  Configuration.h  ISysConfCommunication.h  SystemConfig.h
system_config/src/: Configuration.cpp  ISysConfCommunication.cpp  SystemConfig.cpp  SystemConfig.cpp.orig
system_config/test/: Test111.conf  Test2.conf  test_system_config.cpp
system_config/test/etc/: Alica.conf  Globals.conf  Test.conf
system_config/test/etc/Nida/: Alica.conf  Globals.conf
system_config/test/etc/Nida/Testornder1/: Alica.conf  Test1.conf
system_config/test/etc/Nida/Testornder1/Testordner2/: Alica.conf
system_config/test/etc/Nida/Testornder1/Testordner2/Testordner21/: Globals.conf  Test2.conf
system_config/test/etc/Nida/Testornder1/Testordner2/Testordner22/: Alica.conf  Test.conf
system_config/test/etc/testFolder1/: Alica.conf
system_config/test/etc/testFolder1/testFolder2/: Alica.conf
system_util/include/: SigFault.h
(+2 files in other folders)
