<?xml version="1.0"?>
<package>
  <name>sys_conf_ros_proxy</name>
  <version>0.0.0</version>
  <description>The sys_conf_ros_proxy package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->

  <author email="jane.doe@example.com">Nida Kizilislan</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>system_config</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>system_config</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
