<?xml version="1.0"?>
<package>
  <name>system_config</name>
  <version>0.0.1</version>
  <description>The system_config package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>fsystem</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>fsystem</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>  

  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>